# coffee-style

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  coffeestyle.cpp  coffeestyle.hpp
src/components/: CMakeLists.txt  borderrectangle.cpp  borderrectangle.hpp
src/qml/: ApplicationWindow.qml  CheckableButtonGroup.qml  Icon.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  ScrollBar.qml  ScrollIndicator.qml  ScrollView.qml  Sidebar.qml  SidebarEntry.qml  SplitView.qml  Text.qml  TextArea.qml  WindowDragHandler.qml
src/schemes/: catpuccin.toml
tests/: CMakeLists.txt  TestBasics.qml  testBasics.cpp
